chapter-8/argo-rollouts/blue-green/service-green.yaml
apiVersion: v1
kind: Service
metadata:
  name: notifications-service-green
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: notifications-service
