chapter-8/argo-rollouts/blue-green/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notifications-service-blue
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: notifications-service-blue
            port: 
              number: 80
            

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notifications-service-green
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /green(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: notifications-service-green
            port: 
              number: 80
